# xga-incentives-modeling

./: ANALYSIS_EXAMPLE.md  README.md  bbonds.py  low_price_track_allocations_results.json  main.py  mass_market_allocations_100.json  pyproject.toml  requirements.txt  solver.py  tbonds.py  vbonds.py
attic/: README.md  low_.py  obonds.py  solver.py  types.py  utils.py
scripts/: analyze_beta_formula.py  analyze_hurdle_constraints.py  d.py  debug_beta_calculation.py  debug_cliff_calculation.py  debug_full_sqrt.py  debug_hurdle.py  debug_roi_calculation.py  debug_simple.py  debug_solver2.py  debug_sqrt.py  debug_test.py  demo_enhanced_cli.py  find_10_configurations.py  find_10_relaxed_configurations.py  find_optimal_solutions.py  find_profitable_configs.py  find_profitable_solutions.py  find_solution_conservative.py  find_solution_low_price.py  find_solution_with_relaxation.py  find_solutions_constrained_hurdle.py  find_solutions_multi_approach.py  find_solutions_relaxed_hurdle.py  generate_mass_market_allocations.py  latest.py  quick_config_finder.py  run_kalman_tests.py  simple_config_generator.py  simple_conservative_solver.py  simple_low_price_solver.py  simple_solver.py  test_cli_charts.py  test_complete_workflow.py  test_fixed_charts.py  test_kalman_solver.py  test_metrics.py  test_track_charts.py  test_tracks.py  trace_hurdle_calculation.py  (+2 more)
src/airdrop_calculator/: analysis.py  (+9 more)
tests/: conftest.py  test_analysis.py  test_cli.py  test_core.py  test_kalman_edge_cases.py  test_kalman_filter.py  test_kalman_integration.py  test_kalman_performance.py  test_solver.py
